cc: Set sync token on resource even if context is lost.

If the gpu process crashes the worker context will return null sync
tokens which the resource write lock ignores. It's possible for the
compositor context to not detect the gpu process crash until much later.
Until then the scheduler might initiate a draw which will crash when
DCHECKing that resources being sent have sync tokens.

This CL also enables sync tokens for LayerTreeTests by default and
includes some minor cleanup in LayerTreeHostTestContext.

R=brianderson@chromium.org,danakj@chromium.org
BUG=645736
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2387333003
Cr-Commit-Position: refs/heads/master@{#423720}

Former-commit-id: e9fd952d2b376783ae04864e5fcdec647cf2942e